# decibelle

./: Cargo.toml  README.md
src/: app.rs  audiobook_scanner.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  models.rs  thread.rs
src/app/: mod.rs  state.rs
src/audio/: mod.rs  player.rs  types.rs
src/config/: mod.rs
src/events/: types.rs
src/input/: thread.rs
src/models/: book.rs  config.rs  mod.rs
src/player/: commands.rs  mod.rs  thread.rs
src/ui/: cover.rs  loading.rs  mod.rs  notifications.rs  render.rs  theme.rs
