[package]
name = "decibelle"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
walkdir = "2.4"
regex = "1.10"
rodio = "0.17"
symphonia = { version = "0.5", features = ["mp3", "flac", "vorbis", "aac"] }
