[package]
name = "decibelle"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
symphonia = { version = "0.5", features = ["isomp4", "aac"] }
cpal = "0.15"
dirs = "5.0"
ratatui-image = "1"
image = "0.25"
